docs: land Gale 1.0 release guidance